syntax = "proto3";

package gophkeeper.grpc;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc";

message LoginPassword {
  string secret_id = 1;
  string login = 2;
  string password = 3;
  map<string, string> meta = 4;
  int64 updated_at = 5;
}

message Text {
  string secret_id = 1;
  string content = 2;
  map<string, string> meta = 3;
  int64 updated_at = 4;
}

message Binary {
  string secret_id = 1;
  bytes data = 2;
  map<string, string> meta = 3;
  int64 updated_at = 4;
}

message Card {
  string secret_id = 1;
  string number = 2;
  string holder = 3;
  int32 exp_month = 4;
  int32 exp_year = 5;
  string cvv = 6;
  map<string, string> meta = 7;
  int64 updated_at = 8;
}